@@ -1,6 +1,6 @@
 Date: 2024-06-04
 Package: CHNOSZ
-Version: 2.1.0-16
+Version: 2.1.0-17
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
